# viet-bazi-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  service-worker.js  tsconfig.json
bindings/python/: pyproject.toml
bindings/python/tests/: test_client.py
bindings/python/viet_bazi/: __init__.py  client.py
bindings/python/viet_bazi/_engine/: calendar.js  capabilities.js  cities.js  cli.js  compatibility.js  conformance.js  constants.js  engine 2.js  engine.js  errors.js  index.js  json 2.js  json.js  localization-report.js  localization.js  manifest.json  pattern.js  schema.js  sensitivity.js  shen-sha.js  svg 2.js  svg.js  traceability.js  wasm.js
bindings/python/viet_bazi/_engine/wasm/: calendar.wasm
demo/: app.js  index.html  manifest.webmanifest  style.css
docs/: api-reference.md  architecture.md  benchmarks.md  bindings.md  cli.md  demo.md  getting-started.md  methodology.md  releasing.md  roadmap.md  schemas-and-conformance.md
schemas/: annual-timeline-1.0.json  bazi-audit-report-1.0.json  bazi-batch-input-1.0.json  bazi-batch-result-1.0.json  bazi-batch-result-1.1.json  bazi-result-1.7.json  birth-input-1.0.json  birth-time-sensitivity-1.0.json  compatibility-input-1.0.json  compatibility-result-1.0.json  localized-annual-timeline-1.0.json  localized-audit-report-1.0.json  localized-birth-time-sensitivity-1.0.json  localized-chart-summary-1.0.json  localized-compatibility-report-1.0.json  localized-facts-report-1.0.json  localized-methodology-report-1.0.json  manifest.json
scripts/: build-wasm.sh  (+19 more)
(+39 files in other folders)
