[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "viet-bazi-engine"
version = "0.19.0"
description = "Typed Python bridge for the viet-bazi-engine JSON CLI"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["viet_bazi*"]
