[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "viet-bazi-engine"
version = "0.42.0"
description = "Self-contained typed Python bridge for viet-bazi-engine"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["viet_bazi*"]

[tool.setuptools.package-data]
viet_bazi = ["_engine/*.js", "_engine/wasm/*.wasm", "_engine/manifest.json"]
